<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige_200"
    tools:context=".CustomerTicketFragment">

    <FrameLayout
        android:id="@+id/el2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:context=".CustomerTicketFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/CustomerServiceMenuLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv1"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:fontFamily="@font/kollektif"
                android:gravity="center"
                android:text="@string/cust_ticket_text_1"
                android:textColor="@color/indigo_500"
                android:textSize="28sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:lineHeight="30sp" />

            <TextView
                android:id="@+id/tvQueuePosition"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/rounded_corner"
                android:fontFamily="@font/kollektif"
                android:gravity="center"
                android:padding="30sp"
                android:text="@string/dummy_num"
                android:textColor="@color/beige_200"
                android:textSize="40sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv1" />

            <TextView
                android:id="@+id/tvCustomerTicketNumber"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/kollektif"
                android:gravity="center"
                android:text="@string/ticket_number"
                android:textColor="@color/indigo_500"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvQueuePosition"
                app:lineHeight="30sp" />

            <TextView
                android:id="@+id/tvCurrentlyServing"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/kollektif"
                android:gravity="center"
                android:text="@string/currently_serving"
                android:textColor="@color/indigo_500"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvCustomerTicketNumber"
                app:lineHeight="30sp" />

            <TextView
                android:id="@+id/tvNotify"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/kollektif"
                android:gravity="center"
                android:text="@string/cust_ticket_text_2"
                android:textColor="@color/indigo_500"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvCurrentlyServing"
                app:lineHeight="30sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLeaveQueue"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:gravity="center_horizontal|center_vertical"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/leave_queue"
                android:textColor="@color/salmon_500"
                app:backgroundTint="@color/beige_200"
                app:icon="@drawable/ic_cancel"
                app:iconTint="@color/salmon_500"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvNotify"
                app:strokeColor="@color/salmon_500"
                app:strokeWidth="2dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>