<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/customer_ticket"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CustomerHome">

    <FrameLayout
        android:id="@+id/el1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:context=".CustomerHome">

        <TextView
            android:layout_width="270dp"
            android:layout_height="match_parent"
            android:fontFamily="@font/kollektif"
            android:gravity="center"
            android:text="@string/cust_home_text_1"
            android:textSize="28sp" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/el2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/el1"
        app:layout_constraintVertical_bias="0.0"
        tools:context=".CustomerHome">

        <Button
            android:id="@+id/btn_loan_payment"
            android:layout_width="270dp"
            android:layout_height="match_parent"
            android:text="@string/loans"
            app:backgroundTint="@color/salmon_500"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textSize="16sp"
        />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/el3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/el2"
        app:layout_constraintVertical_bias="0.0"
        tools:context=".CustomerHome">

        <Button
            android:id="@+id/btn_accounts"
            android:layout_width="270dp"
            android:layout_height="match_parent"
            android:text="@string/accounts"
            app:backgroundTint="@color/salmon_500"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textSize="16sp"
        />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/el4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/el3"
        app:layout_constraintVertical_bias="0.0"
        tools:context=".CustomerHome">

        <Button
            android:id="@+id/btn_payments"
            android:layout_width="270dp"
            android:layout_height="match_parent"
            android:text="@string/payments"
            app:backgroundTint="@color/salmon_500"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textSize="16sp"
        />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>