<?xml version="1.0" encoding="utf-8"?>
<!--    Begin replaceable fragment content    -->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/beige_200"
    tools:context=".CustomerQueueOptionsFragment">


    <FrameLayout
        android:id="@+id/el2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:context=".CustomerQueueOptionsFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/CustomerServiceMenuLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvServiceTitle"
                android:layout_width="400dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:fontFamily="@font/kollektif"
                android:gravity="center"
                android:text="@string/service_queue_options"
                android:textColor="@color/indigo_700"
                android:textSize="28sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnRequestTicket"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/request_ticket"
                android:textSize="16sp"
                app:backgroundTint="@color/salmon_500"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvServiceTitle" />

            <Button
                android:id="@+id/btnViewQueue"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/view_queue"
                android:textSize="16sp"
                app:backgroundTint="@color/salmon_500"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnRequestTicket" />

            <Button
                android:id="@+id/btnLeaveQueue"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/leave_queue"
                android:textSize="16sp"
                app:backgroundTint="@color/salmon_500"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnViewQueue" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>